@@ -274,7 +274,8 @@ class ConfigInvoker extends BaseInvoker implements IConfigInvoker {
                 tm.getGroups(),
                 arguments.getTestClass(),
                 arguments.getInstance())
-            && !alwaysRun) {
+            && !alwaysRun
+            && !m_continueOnFailedConfiguration) {
           log(3, "Skipping " + Utils.detailedMethodName(tm, true));
           InvokedMethod invokedMethod = new InvokedMethod(System.currentTimeMillis(), testResult);
           runConfigurationListeners(testResult, arguments.getTestMethod(), true /* before */);
